add to and delete from dummy data